[package]
name = "ul-next"
version = "0.1.0"
edition = "2021"
authors = ["Amjad Alsharafi", "Francisco Ayala Le Brun"]
description = "Ultralight Rust bindings"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/Amjad50/ul-next"

[features]
default = []
# link only Ultralight unique libraries, and not other dependancies that
# may be available in the host system (such as libglib and libgio)
only-ul-deps = ["ul-sys/only-ul-deps"]

[dependencies]
ul-sys = { version="1.4.0-alpha.0", package="ul-next-sys", path="sys" }
scopeguard = "1.1"
lazy_static = "1.4"
glium = { version="0.33", default-features=false, features=[], optional=true }
thiserror = "1.0"

[dev-dependencies]
png = "0.17"
glium = "0.33"
winit = "0.28"
glutin-winit = "0.4"

[[example]]
name = "glium_custom_gpu_driver"
required-features = ["glium"]

[workspace]
members = ["sys"]
