[package]
name = "ul-next"
version = "0.2.0"
edition = "2021"
authors = ["Amjad Alsharafi", "Francisco Ayala Le Brun"]
description = "Ultralight Rust bindings"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/Amjad50/ul-next"
keywords = ["ultralight", "webview", "webrender", "graphics", "rendering"]
categories = ["graphics", "rendering", "api-bindings"]
rust-version = "1.60.0"

[features]
default = []
docs_only = ["ul-sys/docs_only"]
# link only Ultralight unique libraries, and not other dependancies that
# may be available in the host system (such as libglib and libgio)
only-ul-deps = ["ul-sys/only-ul-deps"]

[dependencies]
ul-sys = { version="1.4.0-beta.ae79344", package="ul-next-sys", path="sys" }
scopeguard = "1.1"
lazy_static = "1.4"
glium = { version="0.34", default-features=false, features=[], optional=true }
thiserror = "1.0"

[dev-dependencies]
png = "0.17"
glium = "0.34"
winit = "0.29"
glutin-winit = "0.4"

[[example]]
name = "glium_custom_gpu_driver"
required-features = ["glium"]

[workspace]
members = ["sys"]

[package.metadata.docs.rs]
features = ["docs_only"]
