[package]
name = "ul-next-sys"
version = "1.4.0-beta.158d65c-4"
edition = "2021"
authors = ["Amjad Alsharafi"]
description = "sys bindings for Ultralight, for ul-next"
license-file = "../LICENSE.txt"
readme = "../README.md"
repository = "https://github.com/Amjad50/ul-next"
keywords = ["ultralight", "webview", "webrender", "graphics", "rendering"]
categories = ["graphics", "rendering", "api-bindings"]

[features]
default = ["appcore_linked"]
# Link the Ultralight libraries at build time (except AppCore)
linked = []
# Link the AppCore library at build time (will include all other libraries)
appcore_linked = ["linked"]
# Support loading the Ultralight libraries at runtime manually
loaded = ["libloading"]

# link only Ultralight unique libraries, and not other dependancies that
# may be available in the host system (such as libglib and libgio)
only-ul-deps = []

[build-dependencies]
sevenz-rust = "0.6.1"
ureq = "2.10.1"

[dependencies]
libloading = {version = "0.8.5", optional = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

